hphp/hack/test/typecheck/generics_restrictions/covariance2.php.exp
File "covariance2.php", line 4, characters 24-24:
Illegal usage of a covariant type parameter (Typing[4120])
File "covariance2.php", line 3, characters 14-14:
This is where the parameter was declared as covariant (+)
File "covariance2.php", line 4, characters 24-24:
Function parameters are contravariant
File "covariance2.php", line 5, characters 30-31:
Illegal usage of a covariant type parameter (Typing[4120])
File "covariance2.php", line 3, characters 14-14:
This is where the parameter was declared as covariant (+)
File "covariance2.php", line 5, characters 30-31:
Function parameters are contravariant
