hphp/hack/test/typecheck/generics_restrictions/covariance2.php
<?hh // partial

interface X<+T> {
  public function test(T $x): void;
  public function test2(T... $x): void;
}
